--- a/css/style.css
+++ b/css/style.css
@@ -1,36 +1,34 @@
-body
+body{
   font-size: 14px;
 }
 
 nav {
-  background color: yellow;
+  background color: #FFFF00;
   height: 100px;
   margin-top: -10px;
   position: fixed;
   width: 100%;
-
+}
 
 section {
   margin: 0 auto;
   width: 60%;
 }
 
-h1 {
+.header h1 {
   font-family sans-serif;
   font-size: 2em;
 }
 
-.example, h3 {
+.header h3 {
   padding-top: 30px;
-  text-align center
-}
-
-h3 {
+  text-align center;
   font-size: 1.3em;
 }
 
 .element {
-  background-color: green;
+  background-color: #008000;
   height: 100px;
   margin 10px 0;
   width: 100%;
+}
