--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ nav {
   width: 100%;
 }
 
-.section {
+section {
   margin: 0 auto;
   width: 60%;
 }
@@ -26,7 +26,7 @@ nav {
   font-size: 1.3em;
 }
 
-.element {
+element {
   background-color: #008000;
   height: 100px;
   margin 10px 0;
