--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,10 @@
 body{
+/* this is the body */
   font-size: 14px;
 }
 
-nav {
+.nav {
+/* this is the navigation */
   background color: #FFFF00;
   height: 100px;
   margin-top: -10px;
@@ -10,23 +12,27 @@ nav {
   width: 100%;
 }
 
-section {
+.section {
+/* this is the section */
   margin: 0 auto;
   width: 60%;
 }
 
-.header h1 {
+ h1 {
+ /* this is header 1 */
   font-family sans-serif;
   font-size: 2em;
 }
 
-.header h3 {
+ h3 {
+ /* this is header 3*/
   padding-top: 30px;
   text-align center;
   font-size: 1.3em;
 }
 
-element {
+.element {
+/* this is the element */
   background-color: #008000;
   height: 100px;
   margin 10px 0;
